[package]
name = "tasc"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Kim-Dewelski/tasc"
documentation = "https://docs.rs/tasc/latest/tasc"
keywords = ["async", "no-std", "threads", "minimal"]
categories = ["no-std", "asynchronous"]
description = "A minimnal, asynchronous threadpool"

[features]
default = ["std", "global"]

std = ["dep:crossbeam-channel"]
global = ["std"]

[dependencies]
spin = "0.9.8"
num_cpus = "0.2"

# STD feature
crossbeam-channel = { version = "0.5.13", optional = true }

[dev-dependencies]
pollster = "0.3.0"
